<resources>
    <string name="app_name">Nutrition App</string>
    <string name="measure_prompt">Choose a measure</string>
    <string name="options_main">Options:</string>
    <string name="options_register_foods">Register foods</string>
    <string name="options_food_list">Food List</string>
    <string name="option_imc">BMI</string>
    <string name="option_exit">Exit</string>
    <string name="label_name_food">Name</string>
    <string name="label_quant">Quantity</string>
    <string name="label_kcal">Calories</string>
    <string name="btn_register_new_food">Register</string>
    <string name="btn_update_food">Update</string>
    <string name="btn_cancel_register_new_food">Cancel</string>
    <string name="label_imc">Calculate BMI</string>
    <string name="label_weight">Weight</string>
    <string name="label_height">Height:</string>
    <string name="label_kg">Kg</string>
    <string name="label_cm">Cm</string>
    <string name="button_calc_imc">Calculate</string>
    <string name="button_cancel_calc_imc">Cancel</string>
    <string name="action_about">About</string>
    <string name="about">About</string>
    <string name="error_insert">Error entering record</string>
    <string name="success_insert">Record successfully entered</string>

    <string name="about_text">
        Nutrition App is an application developed for people that want a help to nutrition education.\n
        \nDevelopers by:\n
        &#009;&#009;Caitano Júnior\n
        &#009;&#009;Fabrício Lélis.
    </string>
    <string name="action_exit">Exit</string>
    <string name="invalid_value_imc_calc">Please, put a valid value</string>
    <string name="very_underweight_bmi">You are very underweight!</string>
    <string name="light_underweight_bmi">You are slightly malnourished!</string>
    <string name="underweight_bmi">You are underweight!</string>
    <string name="normal_bmi">You are at ideal weight!</string>
    <string name="overweight_bmi">Attention, you are above ideal weight!</string>
    <string name="obese_bmi_level1">Beware, you are with obesity grade I!</string>
    <string name="obese_bmi_level2">Beware, you are with obesity grade II!</string>
    <string name="obese_bmi_level3">Beware, you are with obesity grade III!</string>
    <string name="btn_ok">Ok</string>
    <string name="imc_result">"BMI result: "</string>
    <string name="errorUnit">Select a unit of measurement</string>
    <string-array name="measure_arrays">
        <item>Select</item>
        <item>Unit(s)</item>
        <item>Slice(s)</item>
        <item>Liter</item>
        <item>ml</item>
        <item>Cup(s)</item>
        <item>Kg</item>
        <item>Gram(s)</item>
        <item>Portion</item>
        <item>Spoon(s)</item>
    </string-array>

    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent_mail">Sent Mail</string>
    <string name="drafts">Drafts</string>
    <string name="categories">Categories</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="search">Search</string>

    <string name="important">Important</string>
    <string name="documents">Documents</string>

    <!-- Toast -->
    <string name="open_user_profile">Open user profile</string>
    <string name="open_settings">Open settings</string>
</resources>
