<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/label_imc"
        android:id="@+id/label_screem_imc"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/label_weight"
        android:text="@string/label_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_screem_imc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edit_text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_weight"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        android:maxLength="3"
        android:ems="5" />

    <TextView
        android:id="@+id/label_kg"
        android:text="@string/label_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_weight"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/label_height"
        android:text="@string/label_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_weight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edit_text_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_height"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        android:maxLength="3"
        android:ems="5" />

    <TextView
        android:id="@+id/label_cm"
        android:text="@string/label_cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_height"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/button_calc_imc"
            android:text="@string/button_calc_imc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/edit_text_height"
            android:layout_marginRight="200dp"
            android:layout_marginTop="80dp"
            android:layout_weight="1"
            android:onClick="calcImc"/>

    <Button
        android:id="@+id/button_cancel_calc_imc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_text_height"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="80dp"
        android:onClick="onBackPressed"
        android:text="@string/btn_cancel_register_new_food" />
</RelativeLayout>
