<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_screem_imc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/label_imc"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/label_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_screem_imc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/label_weight" />

    <EditText
        android:id="@+id/edit_text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_weight"
        android:layout_centerHorizontal="true"
        android:ems="5"
        android:inputType="number"
        android:maxLength="3" />

    <TextView
        android:id="@+id/label_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_weight"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_kg" />

    <TextView
        android:id="@+id/label_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_weight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/label_height" />

    <EditText
        android:id="@+id/edit_text_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_height"
        android:layout_centerHorizontal="true"
        android:ems="5"
        android:inputType="number"
        android:maxLength="3" />

    <TextView
        android:id="@+id/label_cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_height"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_cm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_calc_imc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="80dp"
            android:layout_weight="1"
            android:onClick="calcImc"
            android:text="@string/button_calc_imc" />

        <Button
            android:id="@+id/button_cancel_calc_imc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="80dp"
            android:layout_weight="1"
            android:onClick="onBackPressed"
            android:text="@string/btn_cancel_register_new_food" />

    </LinearLayout>

</RelativeLayout>
