<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="horizontal"
    android:weightSum="6">

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/options_main"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnInclude"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="cad_item"
            android:text="@string/options_register_foods" />

        <Button
            android:id="@+id/ButtonSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="food_list"
            android:text="@string/options_food_list" />

        <Button
            android:id="@+id/btnIMC"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="imc"
            android:text="@string/option_imc" />
    </LinearLayout>
</LinearLayout>

