<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/about"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_about"
        android:layout_gravity="center"
        android:src="@drawable/image" />

    <Button
        android:id="@+id/btn_about_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:onClick="onOkPressed"
        android:text="@string/btn_ok" />

</RelativeLayout>
